# ch57x-pac

./: .gitignore  Cargo.toml  README.md  ch57x.svd  device.x  plan.md
src/: lib.rs  pfic.rs  pwmx.rs  spi0.rs  sys.rs  systick.rs  tmr0.rs  tmr1.rs  tmr2.rs  tmr3.rs  uart0.rs  uart1.rs  uart2.rs  uart3.rs  usb.rs
src/pfic/: r32_pfic_cfgr.rs  r32_pfic_fibaddrr.rs  r32_pfic_fifoaddrr0.rs  r32_pfic_fifoaddrr1.rs  r32_pfic_fifoaddrr2.rs  r32_pfic_fifoaddrr3.rs  r32_pfic_gisr.rs  r32_pfic_iactr1.rs  r32_pfic_iactr2.rs  r32_pfic_ienr1.rs  r32_pfic_ienr2.rs  r32_pfic_ipr1.rs  r32_pfic_ipr2.rs  r32_pfic_iprior0.rs  r32_pfic_iprior1.rs  r32_pfic_iprior10.rs  r32_pfic_iprior11.rs  r32_pfic_iprior12.rs  r32_pfic_iprior13.rs  r32_pfic_iprior14.rs  r32_pfic_iprior15.rs  r32_pfic_iprior16.rs  r32_pfic_iprior17.rs  r32_pfic_iprior18.rs  r32_pfic_iprior19.rs  r32_pfic_iprior2.rs  r32_pfic_iprior20.rs  r32_pfic_iprior21.rs  r32_pfic_iprior22.rs  r32_pfic_iprior23.rs  r32_pfic_iprior24.rs  r32_pfic_iprior25.rs  r32_pfic_iprior26.rs  r32_pfic_iprior27.rs  r32_pfic_iprior28.rs  r32_pfic_iprior29.rs  r32_pfic_iprior3.rs  r32_pfic_iprior30.rs  r32_pfic_iprior31.rs  r32_pfic_iprior32.rs  (+48 more)
src/pwmx/: r8_pwm10_data.rs  r8_pwm11_data.rs  r8_pwm4_data.rs  r8_pwm5_data.rs  r8_pwm6_data.rs  r8_pwm7_data.rs  r8_pwm8_data.rs  r8_pwm9_data.rs  r8_pwm_clock_div.rs  r8_pwm_config.rs  r8_pwm_int_ctrl.rs  r8_pwm_out_en.rs  r8_pwm_polar.rs
src/spi0/: r16_spi0_dma_beg.rs  r16_spi0_dma_end.rs  r16_spi0_dma_now.rs  r16_spi0_total_cnt.rs  r8_spi0_buffer.rs  r8_spi0_clock_div__r8_spi0_slave_pre.rs  (+8 more)
(+184 files in other folders)
